--- a/flaskapp/templates/net.html
+++ b/flaskapp/templates/net.html
@@ -6,7 +6,7 @@
 {% block content %}
 {{ wtf.quick_form(form, method='post',enctype="multipart/form-data", action="net") }}
 <!-- один из стандартных тэгов html - заголовок второго уровня -->
-<h2>grafik: </h2> 
+<h2>Grafics: </h2> 
 <!-- проверяем есть ли данные классификации -->
 {% if gr_name %}
  <p>{{gr_name}}
@@ -16,7 +16,7 @@
 {% endif %}
 
 
-<h2>Image is here: </h2>
+<h2>Image: </h2>
 <!-- отображаем загруженное изображение с закругленными углами -->
 <!-- если оно есть (после submit) -->
 {% if image_name %}
