--- a/flaskapp/templates/net.html
+++ b/flaskapp/templates/net.html
@@ -13,6 +13,11 @@
  <p><img src={{gr_name}}/>
 {% else %}
  <p> There is no image yet </p>
+{% if gr_name1 %}
+ <p>{{gr_name1}}
+ <p><img src={{gr_name1}}/>
+{% else %}
+ <p> There is no image yet </p>
 {% endif %}
 
 
