--- a/flaskapp/templates/net.html
+++ b/flaskapp/templates/net.html
@@ -6,27 +6,15 @@
 {% block content %}
 {{ wtf.quick_form(form, method='post',enctype="multipart/form-data", action="net") }}
 <!-- один из стандартных тэгов html - заголовок второго уровня -->
-<h2>Grafics: </h2> 
+<h2>Table: </h2> 
 <!-- проверяем есть ли данные классификации -->
 {% if gr_name %}
  <table border="1" bordercolor="#aaa" cellspacing="0" cellpadding="0">
  <tr>
-     <td><img style="display:block;" width="100%" height="100%" src="/static/gr_name1.png" /></td>
      <td><img style="display:block;" width="100%" height="100%" src="/static/img1.jpg" /></td>
+     <td><img style="display:block;" width="100%" height="100%" src="/static/img1.png" /></td>
  </tr>
  </table>
 {% else %}
  <p> There is no image yet </p>
 {% endif %}
-
-
-<h2>Image: </h2>
-<!-- отображаем загруженное изображение с закругленными углами -->
-<!-- если оно есть (после submit) -->
-{% if image_name %}
- <p>{{image_name}}
- <p><img src={{image_name}}/>
-{% else %}
- <p> There is no image yet </p>
-{% endif %}
-{% endblock %}
