--- a/flaskapp/templates/net.html
+++ b/flaskapp/templates/net.html
@@ -21,15 +21,15 @@
     <td><img style="display:block;" width="100%" height="100%" src="/static/newgrv2.png" /></td>
 </tr>
 <tr>
-    <td><Изначальное изображение></td>
-    <td><Изображение с измененной яркостью></td>
-    <td><Изображение с измененной контрастностью></td>
-    <td><График распределения цветов исходного изображения по горизонтали></td>
-    <td><График распределения цветов исходного изображения по вертикали></td>
-    <td><График распределения цветов изображения с измененной яркостью по горизонтали></td>
-    <td><График распределения цветов изображения с измененной яркостью по вертикали></td>
-    <td><График распределения цветов изображения с измененным контрастом по горизонтали></td>
-    <td><График распределения цветов изображения с измененным контрастом по вертикали></td>
+    <td><font size="5">Изначальное изображение</font></td>
+    <td>Изображение с измененной яркостью</td>
+    <td>Изображение с измененной контрастностью</td>
+    <td>График распределения цветов исходного изображения по горизонтали</td>
+    <td>График распределения цветов исходного изображения по вертикали</td>
+    <td>График распределения цветов изображения с измененной яркостью по горизонтали</td>
+    <td>График распределения цветов изображения с измененной яркостью по вертикали</td>
+    <td>График распределения цветов изображения с измененным контрастом по горизонтали</td>
+    <td>График распределения цветов изображения с измененным контрастом по вертикали</td>
 </tr>
 </table>
 {% endblock %}
