--- a/flaskapp/templates/net.html
+++ b/flaskapp/templates/net.html
@@ -22,14 +22,14 @@
 </tr>
 <tr>
     <td><font size="5">Изначальное изображение</font></td>
-    <td>Изображение с измененной яркостью</td>
-    <td>Изображение с измененной контрастностью</td>
-    <td>График распределения цветов исходного изображения по горизонтали</td>
-    <td>График распределения цветов исходного изображения по вертикали</td>
-    <td>График распределения цветов изображения с измененной яркостью по горизонтали</td>
-    <td>График распределения цветов изображения с измененной яркостью по вертикали</td>
-    <td>График распределения цветов изображения с измененным контрастом по горизонтали</td>
-    <td>График распределения цветов изображения с измененным контрастом по вертикали</td>
+    <td><font size="5">Изображение с измененной яркостью</font></td>
+    <td><font size="5">Изображение с измененной контрастностью</font></td>
+    <td><font size="5">График распределения цветов исходного изображения по горизонтали</font></td>
+    <td><font size="5">График распределения цветов исходного изображения по вертикали</font></td>
+    <td><font size="5">График распределения цветов изображения с измененной яркостью по горизонтали</font></td>
+    <td><font size="5">График распределения цветов изображения с измененной яркостью по вертикали</font></td>
+    <td><font size="5">График распределения цветов изображения с измененным контрастом по горизонтали</font></td>
+    <td><font size="5">График распределения цветов изображения с измененным контрастом по вертикали</font></td>
 </tr>
 </table>
 {% endblock %}
